Fix scrutinizer issues

--- a/templates/metrics/metrics.html.twig
+++ b/templates/metrics/metrics.html.twig
@@ -112,6 +112,8 @@
             <img src="{{ asset('img/scrutbefore.jpg') }}" alt="scrutinizer before improvements">
             <p>text</p>
             <p><b>Efter:</b></p>
+            <p>Det faktum att jag löste dokumentationskonflikten mellan phpstan och scrutinizer gav ingen förbättring av koden ävem om det "löste" 14 issues. Det är ändå rimligt att 
+            ett så litet problem inte påverkar betyget på kodbasen nämnvärt, intressant att veta.</p>
             <p>LCOM bör nog rimligtvis inte gå ned särskillt mycket då mina klasser i sig har bra och låga värden utan problemet när det kommer till coupling ligger i mina controllers 
             och dessa har jag inte valt att fokusera på, men jag tar definitivt med mig att de finns där och har förbättringspotential.</p>
             <h2 id="Diskussion">Diskussion</h2>
