--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,6 +30,7 @@
                 <li><a href="{{ path('test_roll_dice',{numDice: 0}) }}">Dice test</a></li>
                 <li><a href="{{ path('app_library') }}">Library</a></li>
                 <li><a href="{{ path('metrics') }}">Metrics</a></li>
+                <li><a href="{{ path('adventure') }}">Proj</a></li>
             </ul>
         </nav>
         </div>
