--- a/templates/proj/adventure.html.twig
+++ b/templates/proj/adventure.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <article class="art-row">
 
-{% if adventureGame|length != 0 %}
+{% if adventureGame|length != 0 and not adventureGame.isGameOver %}
 
     <div class="div-col-adv">
         <h1 class="adv-txt">{{ adventureGame.getCurrentRoom.getName }}</h1>
@@ -44,9 +44,40 @@
             <div class="act-col-3">
                 <form class="cardform adv-txt" method="post" action="">
                     {% for item in adventureGame.getPlayerInventory %}
-                        <input class="adv-inp adv-inv" type="submit" name="{{ item.getName }}" value="{{ item.getName }}">
+                        <input class="adv-inp adv-inv" type="submit" name="{{ item.getName }}" value="Use {{ item.getName }}"
+                        onClick="this.form.action='{{ path('adv_play') }}', this.form.item.value=this.name;">
                     {% endfor %}
+                    <input type="hidden" name="item" value="">
                 </form>
+            </div>
+        </div>
+    </div>
+
+{% elseif adventureGame|length != 0 and adventureGame.isGameOver %}
+
+    <div class="div-col-adv">
+        <h1 class="adv-txt">{{ adventureGame.getCurrentRoom.getName }}</h1>
+        <div class="adv-img-container">
+            <img src="{{ adventureGame.getCurrentRoom.getImage }}" alt="portal home">
+        </div>
+        <div class="adv-txt-container">
+            {% for description in adventureGame.getDescription %}
+                <p class="adv-txt">{{ description }}</p>
+            {% endfor %}
+        </div>
+        <div class="adv-act-desc-container">
+                <div class="inv-space">
+                </div>
+                <div class="inv-space-10"></div>
+                <div class="inv-space">
+                </div>
+        </div>
+        <div class="adv-action-container">
+            <div class="act-col-1">
+            </div>
+            <div class="act-col-2">
+            </div>
+            <div class="act-col-3">
             </div>
         </div>
     </div>
