Minor tweaks, Create new room

--- a/templates/proj/home.html.twig
+++ b/templates/proj/home.html.twig
@@ -5,13 +5,13 @@
 {% block body %}
 <article class="art-row">
 <div class="div-col-adv">
-    <h1 class="adv-txt">Time-Lost: Search for a portal home</h1>
+    <h1 class="adv-txt">Time-Lost: Search for a way home</h1>
     <div class="adv-img-container">
         <img src="{{ asset('img/stonehengeportal.png') }}" alt="Picture of a stone henge portal">
     </div>
     <div class="adv-txt-container">
         <p class="adv-txt">Are you brave enough to enter, and do you have the skills required to make it out in one piece? 
-        There is only one way to find out adventurer, step through the portal!</p>
+        There is only one way to find out adventurer, step into the light!</p>
     </div>
     <div class="adv-action-container">
         <div class="act-col-1">
